ERROR:src/settings/nm-settings-plugin.c:147:_nm_settings_plugin_emit_signal_connection_added: assertion failed
The bug has been reported on https://bugs.launchpad.net/ubuntu/+source/network-manager/+bug/1815742When I updated to the latest version of networkmanager in disco dingo (1.15.2-0ubuntu1), it started segfaulting. Reverting to the version in cosmic (1.12.4-1ubuntu1.2) solved the problem.
Syslog shows the following (will attach a more complete log):
feb 13 10:39:45 regan NetworkManager[2315]: NetworkManager:ERROR:src/settings/nm-settings-plugin.c:147:_nm_settings_plugin_emit_signal_connection_added: assertion failed: ((((__extension__ ({ GTypeInstance *__inst = (GTypeInstance*) ((sett_conn)); GType __t = ((nm_settings_connection_get_type ())); gboolean __r; if (!__inst) __r = (0); else if (__inst->g_class && __inst->g_class->g_type == __t) __r = (!(0)); else __r = g_type_check_instance_is_a (__inst, __t); __r; })))))
feb 13 10:39:45 regan NetworkManager[2315]: <info> [1550050785.3612] ifupdown: management mode: managed
feb 13 10:39:45 regan NetworkManager[2315]: invalid uninstantiatable type '(null)' in cast to 'NMSettingsConnection'
feb 13 10:39:45 regan systemd[1]: NetworkManager.service: Main process exited, code=dumped, status=6/ABRT
The Ubuntu bug report includes the system logs collected by the reporting tools which give informations about the connected interfaces, etc. We also requested a backtrace to the submitter and will post here if/when he provides the information