settings/ifupdown: fix ifupdown plugin after merging eni_ifaces and connections hashes

The @eni_ifaces hash may now contain %NULL elements. They are only markers
for interface names, but are not actual connections.

They must be skipped.

Fixes: 6aa66426a4168b3db115646f410bcb5deea6847b

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/124